add_executable(event_baseDemo event_baseDemo.cc)
target_link_libraries(event_baseDemo event event_core)
add_executable(eventLoopDemo eventLoopDemo.cc)
target_link_libraries(eventLoopDemo event event_core)
add_executable(eventnew eventnew.cc)
target_link_libraries(eventnew event event_core)
add_executable(buffereventdemo buffereventdemo.cc)
target_link_libraries(buffereventdemo event event_core)
add_executable(buffereventwatermark buffereventwatermark.cc)
target_link_libraries(buffereventwatermark event event_core)